k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vm-assessment
  labels:
    name: vm-assessment
    app.kubernetes.io/name: vm-assessment-bom
    app.kubernetes.io/component: namespace
